--- a/meta/main.yml
+++ b/meta/main.yml
@@ -151,7 +151,7 @@ galaxy_info:
     # alphanumeric characters. Maximum 20 tags per role.
 
   dependencies:
-    - trustedanalytics.cdh-configuration
+    - {role: trustedanalytics.cdh-configuration}
   # ["trustedanalytics.cdh-configuration"]
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
